# evilcon-2024

./: .gitignore  .gitmodules  .rubocop.yml  Evilcon.sln  README.md  Rakefile  Utils.cs  character_profiles.svg.import  codex_metadata.yaml  constants.gd  credits.org  global_theme.tres  hotel_map_plans.svg.import  icon.svg.import  library.ods  notes.org  notes.txt  operator.gd  operator.gd.uid  project.godot  root_helper.gd  rule22.png.import  rule22.svg.import  rule22b.png.import  rule22k.png.import  rule22s.png.import  util.gd
debug/: debug_overworld.tscn  debug_room.gd  debug_room.gd.uid  debug_room.tscn
evilcon-sim/: .gitignore  Cargo.toml  README.md  dependencies.org  run_all.sh  tmp.gd
evilcon-sim/src/: cli.rs  driver.rs  lib.rs  loader.rs  logging.rs  main.rs  runner.rs  util.rs
evilcon-sim/src/ast/: decl.rs  expr.rs  file.rs  identifier.rs  mod.rs  pattern.rs  stmt.rs  string.rs
evilcon-sim/src/ast/expr/: mod.rs  operator.rs
evilcon-sim/src/ast/string/: formatter.rs  mod.rs
evilcon-sim/src/cardgame/: code.rs  deck.rs  genetic.rs  mod.rs
evilcon-sim/src/cardgame/deck/: mod.rs  validator.rs
evilcon-sim/src/cardgame/genetic/: bradley_terry.rs  mod.rs
evilcon-sim/src/interpreter/: bootstrapping.rs  class.rs  error.rs  eval.rs  method.rs  mocking.rs  mod.rs  operator.rs  value.rs
evilcon-sim/src/interpreter/class/: constant.rs  mod.rs  proxy.rs
evilcon-sim/src/interpreter/mocking/: card_strip.rs  codex.rs  mod.rs  playing_field.rs  randomness.rs  stats.rs  stats_panel.rs  turn_transitions.rs
evilcon-sim/src/interpreter/value/: mod.rs  simple.rs
evilcon-sim/src/parser/: base.rs  decl.rs  error.rs  expr.rs  mod.rs  pattern.rs  sitter.rs  stmt.rs
fonts/: Magical Childhood.ttf.import  (+4 more)
(+698 files in other folders)
