[package]
name = "evilcon-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
glob = "0.3.2"
itertools = "0.14.0"
ordered-float = "5.0.0"
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"
thiserror = "2.0.12"
tree-sitter = "0.25.7"
tree-sitter-gdscript = { "path" = "../tree-sitter-gdscript/" }
